--- a/submissions/jors/bibliography.bib
+++ b/submissions/jors/bibliography.bib
@@ -134,6 +134,13 @@ Approach},
     year = {2018}
 }
 
+@inproceedings{Elbattah2017,
+    author = {M. Elbattah and O. Molloy},
+    booktitle = {AAAI Workshops},
+    title = {Clustering-Aided Approach for Predicting Patient Outcomes with Application to Elderly Healthcare in {Ireland}},
+    year = {2017}
+}
+
 @article{Erlang1917,
     author = {Erlang, Agner Krarup},
     journal = {Post Office Electrical Engineer's Journal},
@@ -191,6 +198,29 @@ Daniel},
     year = {2002}
 }
 
+@article{Haraty2015,
+    author = {Ramzi A. Haraty and Mohamad Dimishkieh and Mehedi Masud},
+    doi = {10.1155/2015/615740},
+    journal = {International Journal of Distributed Sensor Networks},
+    number = {6},
+    pages = {615740},
+    publisher = {{SAGE} Publications},
+    title = {An Enhanced k-Means Clustering Algorithm for Pattern Discovery in Healthcare Data},
+    volume = {11},
+    year = {2015}
+}
+
+@article{Hargett2017,
+    author = {Charles Hargett and Joseph Doty and Jennifer Hauck and Allison Webb and Steven Cook and Nicholas Tsipis and Julie Neumann and Kathryn Andolsek and Dean Taylor},
+    doi = {10.2147/jhl.s141664},
+    journal = {Journal of Healthcare Leadership},
+    pages = {69--78},
+    publisher = {Informa {UK} Limited},
+    title = {Developing a model for effective leadership in healthcare: a concept mapping approach},
+    volume = {Volume 9},
+    year = {2017}
+}
+
 @article{Harper2006,
     author = {Harper, Paul R. and Winslett, David},
     doi = {10.1016/j.ejor.2004.05.014},
@@ -238,6 +268,18 @@ values},
     year = {2018}
 }
 
+@article{Jahangirian2015,
+    author = {Mohsen Jahangirian and Simone Borsci and Syed Ghulam Sarwar Shah and Simon J E Taylor},
+    doi = {10.1177/0037549715583150},
+    journal = {{SIMULATION}},
+    number = {6},
+    pages = {511--526},
+    publisher = {{SAGE} Publications},
+    title = {Causal factors of low stakeholder engagement: a survey of expert opinions in the context of healthcare simulation projects},
+    volume = {91},
+    year = {2015}
+}
+
 @article{Kingman2009,
     author = {J. F. C. Kingman},
     doi = {10.1007/s11134-009-9147-4},
@@ -272,6 +314,17 @@ Theory},
     title = {On Information and Sufficiency},
     volume = {22},
     year = {1951}
+}
+
+@article{Kumar2019,
+    author = {A. {Kumar} and H. {Anjomshoa}},
+    doi = {10.1109/JBHI.2018.2819646},
+    journal = {IEEE Journal of Biomedical and Health Informatics},
+    number = {2},
+    pages = {848-856},
+    title = {A Two-Stage Model to Predict Surgical Patients’ Lengths of Stay From an Electronic Patient Database},
+    volume = {23},
+    year = {2019}
 }
 
 @article{Kuwornu2014,
@@ -341,6 +394,16 @@ Second Service},
     url = {https://www.datadictionary.nhs.uk/}
 }
 
+@article{Ogbuabor2018,
+    author = {Ogbuabor, Godwin and Ugwoke, FN},
+    journal = {International Journal of Computer Science \& Information Technology},
+    number = {2},
+    pages = {27--37},
+    title = {Clustering algorithm for a healthcare dataset using silhouette score value},
+    volume = {10},
+    year = {2018}
+}
+
 @article{Olafsson2008,
     author = {Sigurdur Olafsson and Xiaonan Li and Shuning Wu},
     doi = {10.1016/j.ejor.2006.09.023},
@@ -408,6 +471,29 @@ based on process mining},
     year = {2012}
 }
 
+@article{Santhi2010,
+    author = {Santhi, P and Bhaskaran, V Murali and others},
+    journal = {International Journal for Advances in Computer Science},
+    number = {1},
+    pages = {26--31},
+    title = {Performance of clustering algorithms in healthcare database},
+    volume = {2},
+    year = {2010}
+}
+
+@inproceedings{Satopaa2011,
+    author = {Satopaa, Ville and Albrecht, Jeannie and Irwin, David and
+Raghavan, Barath},
+    booktitle = {Proceedings of the 2011 31st International Conference on
+Distributed Computing Systems Workshops},
+    doi = {10.1109/ICDCSW.2011.20},
+    month = {07},
+    pages = {166--171},
+    title = {Finding a `Kneedle' in a Haystack: Detecting Knee Points in System
+Behavior},
+    year = {2011}
+}
+
 @article{Sexton2016,
     author = {E Sexton and D Bedford},
     doi = {10.1007/s11845-015-1359-5},
@@ -426,6 +512,16 @@ exploratory analysis},
     doi = {10.1002/9781119453765},
     publisher = {John Wiley {\&} Sons,  Inc.},
     title = {Fundamentals of Queueing Theory},
+    year = {2018}
+}
+
+@article{Silitonga2018,
+    author = {Silitonga, Parasian},
+    journal = {International Journal of Computer Science and Information Security},
+    number = {7},
+    pages = {219--221},
+    title = {Clustering of Patient Disease Data by Using K-Means Clustering},
+    volume = {15},
     year = {2018}
 }
 
@@ -580,4 +676,14 @@ Segmentation Through Engagement of Key Stakeholders: A Qualitative
 Study},
     volume = {18},
     year = {2020}
+}
+
+@inproceedings{Zayas2016,
+    author = {Zayas, Cilia E and He, Zhe and Yuan, Jiawei and Maldonado-Molina, Mildred and Hogan, William and Modave, Fran{\c{c}}ois and Guo, Yi and Bian, Jiang},
+    booktitle = {Proceedings of the... International Florida AI Research Society Conference. Florida AI Research Symposium},
+    organization = {NIH Public Access},
+    pages = {361},
+    title = {Examining healthcare utilization patterns of elderly middle-aged adults in the {United States}},
+    volume = {2016},
+    year = {2016}
 }
