Opt for queuing over queueing.

--- a/submissions/jors/main.tex
+++ b/submissions/jors/main.tex
@@ -174,7 +174,7 @@ COPD population before they arrive at the hospital.
 \end{abstract}
 
 \begin{keywords}
-OR in health services; machine learning; queueing
+OR in health services; machine learning; queuing
 \end{keywords}
 
 
