--- a/submissions/jors/main.tex
+++ b/submissions/jors/main.tex
@@ -520,8 +520,8 @@ separation in the characteristics of the clusters.
 
 Although the dataset is confidential and may not be published, a synthetic
 analogue which illustrates the clustering has been archived
-under~\doi{10.5281/zenodo.3908167}. A summary of the dataset and its clustering
-is provided in Table~\ref{tab:summary}. Note that a negative length of stay
+under~DOI:\texttt{10.5281/zenodo.3908167}. A summary of the dataset and its
+clustering is provided in Table~\ref{tab:summary}. Note that a negative length of stay
 indicates that the patient had passed away prior to arriving at the hospital and
 so these spells have been omitted from further analysis. This table separates
 each cluster and the overall dataset (referred to as the population). From this
@@ -1013,9 +1013,11 @@ particular, the data from each scenario is scaled by the corresponding median
 value in the base case, meaning that a metric having a value of 1 is `normal'.
 
 As mentioned in Section~\ref{sec:intro}, the source code used throughout
-this manuscript has been archived online under~\doi{10.5281/zenodo.4457902}.
+this manuscript has been archived online
+under~DOI:\texttt{10.5281/zenodo.4457902}.
 Also, the datasets generated from the simulations in this section, and the
-parameter sweep, have been archived online~\doi{10.5281/zenodo.4457808}.
+parameter sweep, have been archived online
+under~DOI:\texttt{10.5281/zenodo.4457808}.
 
 
 \subsection{Changes to overall patient arrivals}\label{subsec:arrivals}
